added validation for unique username while creating, added validattion if user exists while deleting
